--- a/style.css
+++ b/style.css
@@ -1,208 +1,260 @@
-body{
-    margin:0 ;
-    padding:0 ;
-}
 *{
     margin:0;
-    padding:0;
-    box-sizing: border-box;
+    padding: 0;
+    box-sizing: border-box ;
 }
-.navbar-toggler:focus,
-.navbar-toggler:active,
-.navbar-toggler-icon:focus {
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
+body,input{
+font-family: 'Poppins', sans-serif;
+}
+
+
+
+.container{
+    position: relative;
+    width: 100% ;
+    background-color: #fff ;
+    min-height:100vh ;
+    overflow: hidden;
+}
+.forms-container{
+    position: absolute ;
+    width: 100% ;
+    height: 100% ;
+    top: 0 ;
+    left: 0 ;
+}
+
+.container::before{
+    content: '' ;
+    position: absolute ;
+    height: 2000px;
+    width: 2000px ;
+    top: -10%  ;
+    right: 48% ;
+    background-image: linear-gradient(-45deg, #05d39f 0%, #69F0AE 100%) ;
+    transform: translateY(-50%) ;
+    border-radius: 50% ;
+    z-index: 6;
+    transition: 1.8s ease-in-out;
+
+}
+form{
+    display: flex ;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 5rem;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2 ;
+    padding: 0 5rem ;
+
+}
+
+
+.title{
+    font-size: 2.2rem ;
+    color: #444 !important;
+    margin-bottom: 10px ;
+}
+.input-field{
+    max-width: 380px;
+    width: 100%;
+    height: 55px;
+    background-color: #f0f0f0 !important;
+    margin: 10px 0;
+    border-radius: 55px;
+    display: grid;
+    grid-template-columns: 15% 85%;
+    padding: 0 0.4rem ;
+    position: relative;
+
+}
+.input-field i{
+    text-align: center;
+    line-height: 55px;
+    color: #acacac;
+    font-size: 1.5rem;
+
+}
+.input-field input{
+    background: none;
     outline: none;
-    box-shadow: none;
-}
-.navbar-nav{
-    /* background-color:hsl(0, 0%, 100%) !important; */
-    background-color: transparent;
+    border: none;
+    line-height: 1;
+    font-weight: 600;
+    font-size: 1.2rem;
+    color: #333 !important;
+
 
 }
-.w-100 {
-    width: 100% !important;
-    height: 150vh;
-  }  
-.cra{
-    background-image: url("./b1.jpg");
-    background-size: cover;
-    margin-top: -200px
-}      
-/* .navbar-toggler-icon{
-    color: white;
-    font-weight: bolder;
+.input-field input:placeholder-shown{
+    color: #aaa !important;
+    font-weight: 500;
 
-} */
-/* .navbar-white .navbar-toggler-icon {
-    background-image: url("data:image/svg+xml;..") !important;
-  }
-   */
-
-   @import url('https://fonts.googleapis.com/css2?family=Black+Ops+One&display=swap');  
-   .nav-link{
-   
-    font-size: 22px;
+}
+.btn{
+    width: 150px;
+    height: 49px;
+    outline: none;
+    border: none;
+    border-radius: 48px !important;
+    background-color:#1DE9B6 !important;
+    color: white !important;
     text-transform: uppercase;
     font-weight: 600;
-    font-family: 'Black Ops One', cursive ; 
-    color: white !important;
-    border-bottom: 4px solid transparent;
-   }
-   #lo:hover{
+    margin: 10px 0;
+    transition: all 0.5s;
+}
+.btn:hover{
+    background-color:#00E676  !important;
+
+}
+.social-text{
+    padding: 0.7rem 0;
+
+}
+.social-media{
+    display: flex !important;
+    justify-content: center !important;
+
+}
+.social-icon{
+    height: 46px;
+    width: 46px;
+    border:2px solid #D7CCC8 !important;
+    margin: 0 0.4rem !important;
      
-    /* text-decoration: underline red solid 3px !important; */
-    border-bottom:red solid 3px ;
+    display: flex !important;
+    justify-content: center !important;
+    align-items: center;
+    text-decoration: none;
+    color: #333;
+    font-size: 1.3rem;
+    border-radius: 50%;
+    transition: all 0.5s;
+
+}
+.social-icon:hover{
+    color: #00E676 !important;
+    border-color: #00E676 !important ;
+
+}
+.signin-signup{
+    position: absolute ;
+    top: 50%;
+    left: 75% !important;
+    transform: translate(-50%,-50%) ;
+    display: grid ;
+    grid-template-columns: 1fr ;
+    z-index: 5;
+}
+form.sign-in-form{
+    z-index: 2 !important;
+}
+form.sign-up-form{
+    z-index: 1 !important;
+    opacity: 0 !important;
+} 
+.image{
+    width: 100%;
+    transition: 1.1s 0.4s ease-in-out;
+
+}
+.panels-container{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+}
+.panel{
+    display:  flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    z-index: 7 ;
+
+}
+.left-panel{
+    padding: 3rem 17% 2rem 12% ;
+
+}
+.right-panel{
+    padding: 3rem 12% 2rem 17% ;
     
-    
-
-}  
-.input-group-text{
-    background:none !important;
-    border: none !important;
-    outline: none;
 }
-
-
-.form-control{
-    background:none !important;
-    border: none !important;
-    border-bottom:1px solid white !important;
-    outline: none;
-}
-.bg-dark{
-    background-color: black !important;
+.panel .content{
+    color:#fff;
+    transition: .9s .6s ease-in-out;
 
 }
-  .ss{
-    font-size: 55px;
-     
-    text-transform: uppercase;
+.panel h3{
     font-weight: 600;
-    font-family: 'Black Ops One', cursive ; 
-    color: white !important;
-
-  }
-  .sse{
-
-    font-size: 55px;
-     text-transform: uppercase;
+    line-height: 1;
+    font-size: 1.5rem;
+    
+    
+}
+.panel p{
+    font-size: .95rem;
+    padding: 0.7rem 0;
+}
+.btn.transparent{
+    margin: 0;
+    background: none;
+    border: 2px solid #fff ;
+    width: 130px;
+    height: 41px;
     font-weight: 600;
-     
-    font-family: 'Black Ops One', cursive ;
-    background-image: url("./img.jpg"); 
-    color: transparent;
-    background-size: 100% 100%;
-    -webkit-background-clip: text;
-    font-size: 80px;
+    font-size: 0.8rem;
 
-  }
- .ll{
-     margin-top: -50px;
-      
-     margin-left: 30px !important;
-     margin-right: 30px !important;
-     padding-left: 60px !important;
-     padding-right: 60px !important;
- }    
-.d-none{
-    display: none !important;
 }
-   @media only screen and (max-width: 768px){
-    .nav-link{
-        font-size: 22px;
-        margin-top: 0;
-        
-    }
+.right-panel .content,right-panel .image{
+    transform:translateX(800px);
 
-     #nav{
-        background-color: black !important;
-
-    }
-    bg-dark{
-        background-color: black !important;
-
-    }
-
-    .nav-link{
-
-         margin: 5px !important;
-         padding: 10px !important;
-    
-    }
-    #navbarNavDropdown{
-        /* margin-right: auto;
-        padding-right: auto;
-        margin-bottom: auto;
-        padding-bottom: auto; */
-         /* margin-left: -70px !important;
-        padding-left: -70px !important; */
-        margin-right:0px ;
-        padding-right: 0px;
-        margin-top: -50px;
-        padding-top: 1px;
-    }
-    .navbar-nav{
-        
-        text-align: left !important;
-        
-        margin-left: -100px !important;
-        padding-left: -100px !important;
-        margin-right:0px ;
-        padding-right: 0px;
-        /* margin-right: auto;
-        padding-right: auto;
-        margin-bottom: auto;
-        padding-bottom: auto;
-         */
-    }
-     
 }
-@media only screen and (max-width: 992px){
-    .nav-link{
-        font-size: 22px;
-        margin-top: 0;
-        
-    }
 
-     #nav{
-        background-color: black !important;
+/* animation */
+.container.sign-up-mode::before{
+    transform: translate(100%,-50%);
+    right: 52%;
 
-    }
-    bg-dark{
-        background-color: black !important;
+}
+.container.sign-up-mode .left-panel .image,.container.sign-up-mode .left-panel .content{
+    transform: translate(-800px);
+    right: 52%;
 
-    }
+}
+container.sign-up-mode .right-panel .image,.container.sign-up-mode .right-panel .content{
+    transform: translateX(0%);
+    right: 52%;
 
-    .nav-link{
+}
+.container.sign-up-mode .left-panel{
+    pointer-events: none;
+}
+.container.sign-up-mode .right-panel{
+    pointer-events: all;
+}
+.container.sign-up-mode .signin-signup{
+    left: 25%;
 
-         margin: 5px !important;
-         padding: 10px !important;
+}
+
+
+.container.sign-up-mode form.sign-in-form{
+    z-index: 1;
+    opacity: 0;
     
-    }
-    #navbarNavDropdown{
-        /* margin-right: auto;
-        padding-right: auto;
-        margin-bottom: auto;
-        padding-bottom: auto; */
-         /* margin-left: -70px !important;
-        padding-left: -70px !important; */
-        margin-right:0px ;
-        padding-right: 0px;
-        margin-top: -50px;
-        padding-top: 1px;
-    }
-    .navbar-nav{
-        
-        text-align: left !important;
-        
-        margin-left: -100px !important;
-        padding-left: -100px !important;
-        margin-right:0px ;
-        padding-right: 0px;
-        /* margin-right: auto;
-        padding-right: auto;
-        margin-bottom: auto;
-        padding-bottom: auto;
-         */
-    }
-     
+}
+.container.sign-up-mode form.sign-up-form{
+    z-index: 2;
+    opacity: 1;
+    
 }
