--- a/style.css
+++ b/style.css
@@ -1,260 +1,270 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box ;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap');
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
-body,input{
-font-family: 'Poppins', sans-serif;
+body,
+input {
+  font-family: 'Poppins', sans-serif;
 }
 
-
-
-.container{
-    position: relative;
-    width: 100% ;
-    background-color: #fff ;
-    min-height:100vh ;
-    overflow: hidden;
-}
-.forms-container{
-    position: absolute ;
-    width: 100% ;
-    height: 100% ;
-    top: 0 ;
-    left: 0 ;
+.container {
+  position: relative;
+  width: 100%;
+  background-color: #fff;
+  min-height: 100vh;
+  overflow: hidden;
 }
 
-.container::before{
-    content: '' ;
-    position: absolute ;
-    height: 2000px;
-    width: 2000px ;
-    top: -10%  ;
-    right: 48% ;
-    background-image: linear-gradient(-45deg, #05d39f 0%, #69F0AE 100%) ;
-    transform: translateY(-50%) ;
-    border-radius: 50% ;
-    z-index: 6;
-    transition: 1.8s ease-in-out;
-
-}
-form{
-    display: flex ;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 0 5rem;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2 ;
-    padding: 0 5rem ;
-
+.container:before {
+  content: '';
+  position: absolute;
+  height: 2000px;
+  width: 2000px;
+  top: -10%;
+  right: 48%;
+  transform: translateY(-50%);
+  background-image: linear-gradient(-45deg, #20dbc2 0%, #00bfa6 100%);
+  transition: 1.8s ease-in-out;
+  border-radius: 50%;
+  z-index: 6;
 }
 
-
-.title{
-    font-size: 2.2rem ;
-    color: #444 !important;
-    margin-bottom: 10px ;
+.forms-container {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
-.input-field{
-    max-width: 380px;
-    width: 100%;
-    height: 55px;
-    background-color: #f0f0f0 !important;
-    margin: 10px 0;
-    border-radius: 55px;
-    display: grid;
-    grid-template-columns: 15% 85%;
-    padding: 0 0.4rem ;
-    position: relative;
 
+form {
+  display: flex;
+   
+  align-items: center;
+  
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 5rem;
+  /*overflow: hidden;*/
+  padding: 0rem 5rem;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  transition: 0.2s 0.7s ease-in-out;
 }
-.input-field i{
-    text-align: center;
-    line-height: 55px;
-    color: #acacac;
-    font-size: 1.5rem;
 
+form.sign-in-form {
+  z-index: 2;
 }
-.input-field input{
-    background: none;
-    outline: none;
-    border: none;
-    line-height: 1;
-    font-weight: 600;
-    font-size: 1.2rem;
-    color: #333 !important;
 
+form.sign-up-form {
+  z-index: 1;
+  opacity: 0;
+}
 
+.title {
+  font-size: 2.2rem;
+  color: #444;
+  margin-bottom: 10px;
 }
-.input-field input:placeholder-shown{
-    color: #aaa !important;
-    font-weight: 500;
 
-}
-.btn{
-    width: 150px;
-    height: 49px;
-    outline: none;
-    border: none;
-    border-radius: 48px !important;
-    background-color:#1DE9B6 !important;
-    color: white !important;
-    text-transform: uppercase;
-    font-weight: 600;
-    margin: 10px 0;
-    transition: all 0.5s;
-}
-.btn:hover{
-    background-color:#00E676  !important;
+.input-field {
+  max-width: 380px;
+  width: 100%;
 
+  height: 55px;
+  background-color: #f0f0f0;
+  margin: 10px 0;
+  border-radius: 55px;
+  display: grid;
+  grid-template-columns: 15% 85%;
+  padding: 0 0.4rem;
+  position: relative;
 }
-.social-text{
-    padding: 0.7rem 0;
 
+.input-field i {
+  text-align: center;
+  line-height: 55px;
+  color: #acacac;
+  font-size: 1.1rem;
 }
-.social-media{
-    display: flex !important;
-    justify-content: center !important;
 
+.input-field input {
+  background: none;
+  outline: none;
+  border: none;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: #333;
 }
-.social-icon{
-    height: 46px;
-    width: 46px;
-    border:2px solid #D7CCC8 !important;
-    margin: 0 0.4rem !important;
-     
-    display: flex !important;
-    justify-content: center !important;
-    align-items: center;
-    text-decoration: none;
-    color: #333;
-    font-size: 1.3rem;
-    border-radius: 50%;
-    transition: all 0.5s;
 
+.input-field input::placeholder {
+  color: #aaa;
+  font-weight: 500;
 }
-.social-icon:hover{
+
+.btn {
+  width: 150px;
+  height: 49px;
+  border: none;
+  outline: none;
+  border-radius: 48px;
+  cursor: pointer;
+  background-color: #20dbc2;
+  color: #fff;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin: 10px 0;
+  transition: all 0.5s;
+}
+
+.btn:hover {
+  background-color: #00bfa6;
+}
+
+.social-text {
+  padding: 0.7rem 0;
+}
+
+.social-media {
+  display: flex;
+  justify-content: center;
+}
+
+.social-icon {
+  height: 46px;
+  width: 46px;
+  border: 1px solid #333;
+  margin: 0 0.45rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #333;
+  font-size: 1.3rem;
+  border-radius: 50%;
+  transition: all 0.5s;
+}
+
+.social-icon:hover {
     color: #00E676 !important;
     border-color: #00E676 !important ;
-
-}
-.signin-signup{
-    position: absolute ;
-    top: 50%;
-    left: 75% !important;
-    transform: translate(-50%,-50%) ;
-    display: grid ;
-    grid-template-columns: 1fr ;
-    z-index: 5;
-}
-form.sign-in-form{
-    z-index: 2 !important;
-}
-form.sign-up-form{
-    z-index: 1 !important;
-    opacity: 0 !important;
-} 
-.image{
-    width: 100%;
-    transition: 1.1s 0.4s ease-in-out;
-
-}
-.panels-container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-
-}
-.panel{
-    display:  flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    z-index: 7 ;
-
-}
-.left-panel{
-    padding: 3rem 17% 2rem 12% ;
-
-}
-.right-panel{
-    padding: 3rem 12% 2rem 17% ;
-    
-}
-.panel .content{
-    color:#fff;
-    transition: .9s .6s ease-in-out;
-
-}
-.panel h3{
-    font-weight: 600;
-    line-height: 1;
-    font-size: 1.5rem;
-    
-    
-}
-.panel p{
-    font-size: .95rem;
-    padding: 0.7rem 0;
-}
-.btn.transparent{
-    margin: 0;
-    background: none;
-    border: 2px solid #fff ;
-    width: 130px;
-    height: 41px;
-    font-weight: 600;
-    font-size: 0.8rem;
-
-}
-.right-panel .content,right-panel .image{
-    transform:translateX(800px);
-
 }
 
-/* animation */
-.container.sign-up-mode::before{
-    transform: translate(100%,-50%);
-    right: 52%;
-
-}
-.container.sign-up-mode .left-panel .image,.container.sign-up-mode .left-panel .content{
-    transform: translate(-800px);
-    right: 52%;
-
-}
-container.sign-up-mode .right-panel .image,.container.sign-up-mode .right-panel .content{
-    transform: translateX(0%);
-    right: 52%;
-
-}
-.container.sign-up-mode .left-panel{
-    pointer-events: none;
-}
-.container.sign-up-mode .right-panel{
-    pointer-events: all;
-}
-.container.sign-up-mode .signin-signup{
-    left: 25%;
-
+.signin-signup {
+  position: absolute !important;
+  top: 50% !important;
+  transform: translate(-50%, -50%) !important;
+  left: 75% !important;
+  width: 50% !important;
+  display: grid !important;
+  grid-template-columns: 1fr !important;
+  z-index: 5 !important;
+  transition: 1s 0.7s ease-in-out !important;
 }
 
-
-.container.sign-up-mode form.sign-in-form{
-    z-index: 1;
-    opacity: 0;
-    
+.panels-container {
+  position: absolute !important;
+  width: 100% !important;
+  height: 100% !important;
+  top: 0 !important;
+  left: 0 !important;
+  display: grid !important;
+  grid-template-columns: repeat(2, 1fr) !important;
 }
-.container.sign-up-mode form.sign-up-form{
-    z-index: 2;
-    opacity: 1;
-    
+
+.panel {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: flex-end !important;
+  justify-content: space-around !important;
+  text-align: center !important;
+  z-index: 7 !important;
+}
+
+.left-panel {
+  pointer-events: all !important;
+  padding: 3rem 17% 2rem 12% !important;
+}
+
+.right-panel {
+  pointer-events: none !important;
+  padding: 3rem 12% 2rem 17% !important;
+}
+
+.panel .content {
+  color: #fff !important;
+  transition: 0.9s 0.6s ease-in-out !important;
+}
+
+.panel h3 {
+  font-weight: 600 !important;
+  line-height: 1 !important;
+  font-size: 1.5rem !important;
+}
+
+.panel p {
+  font-size: 0.95rem !important;
+  padding: 0.7rem 0 !important;
+}
+
+.btn.transparent {
+  margin: 0 !important;
+  background: none !important;
+  border: 2px solid #fff !important;
+  width: 130px !important;
+  height: 41px !important;
+  font-weight: 600 !important;
+  font-size: 0.8rem !important;
+}
+
+.image {
+  transition: 1.1s 0.4s ease-in-out;
+  width: 100%;
+}
+
+.right-panel .content,
+.right-panel .image {
+  transform: translateX(800px) !important;
+}
+
+/* ANIMATION */
+
+.container.sign-up-mode::before {
+  transform: translate(100%, -50%) !important;
+  right: 52% !important;
+}
+
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content {
+  transform: translateX(-800px) !important;
+}
+.container.sign-up-mode .left-panel {
+  pointer-events: none !important;
+}
+.container.sign-up-mode .right-panel {
+  pointer-events: all !important;
+}
+
+.container.sign-up-mode .right-panel .image,
+.container.sign-up-mode .right-panel .content {
+  transform: translateX(0%) !important;
+}
+
+.container.sign-up-mode .signin-signup {
+  left: 25% !important;
+}
+
+.container.sign-up-mode form.sign-in-form {
+  z-index: 1 !important;
+  opacity: 0 !important;
+}
+
+.container.sign-up-mode form.sign-up-form {
+  z-index: 2 !important;
+  opacity: 1 !important;
 }
