--- a/style.css
+++ b/style.css
@@ -97,6 +97,24 @@ form.sign-in-form {
   font-size: 1.1rem;
   color: #333;
 }
+.input-field select {
+  background: none;
+  outline: none;
+  border: none;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: #aaa;
+}
+.input-field select option {
+  background: none;
+  outline: none;
+  border: none;
+  line-height: 1;
+  font-weight: 600;
+  font-size: 1.1rem;
+  color: #000000;
+}
 
 .input-field input::placeholder {
   color: #aaa;
@@ -345,6 +363,47 @@ form.sign-in-form {
     padding: 0.5rem 0;
   }
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  .laa{
+    /* padding:  0;
+     margin-top: -50px !important;
+     margin-bottom: 15px !important; */
+    /* padding-bottom: 3px; ; */
+    display: none;
+  }
+  .title {
+    font-size: 2.2rem;
+    color: #444;
+    margin-bottom: 10px;
+    margin-top: -11px;
+    margin-bottom: 2px;
+  }
+  #sign-in-btn{
+    background-color: #000000;
+    color: #ffffff;
+    margin: 3px;
+  }
+  .la{
+    display: none;
+  }
   .btn.transparent {
     width: 110px;
     height: 35px;
@@ -363,7 +422,7 @@ form.sign-in-form {
   }
 
   .container.sign-up-mode:before {
-    transform: translate(-50%, 100%);
+    transform: translate(-50%, 109%);
     bottom: 32%;
     right: initial;
   }
