--- a/style.css
+++ b/style.css
@@ -1,475 +1,215 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body,
-input {
-  font-family: "Poppins", sans-serif;
+.dark{
+    background-color: black !important;
 }
 
-.container {
-  position: relative;
-  width: 100%;
-  background-color: #fff;
-  min-height: 100vh;
-  overflow: hidden;
+header{
+    background-color: black ;
 }
 
-.forms-container {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
+header .fa-bars{
+    color: white;
+    font-size: 1.2em;
 }
 
-.signin-signup {
-  position: absolute;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  left: 75%;
-  width: 50%;
-  transition: 1s 0.7s ease-in-out;
-  display: grid;
-  grid-template-columns: 1fr;
-  z-index: 5;
+.navbar-toggler{
+    border: none;
+    outline: none;
 }
 
-form {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0rem 5rem;
-  transition: all 0.2s 0.7s;
-  overflow: hidden;
-  grid-column: 1 / 2;
-  grid-row: 1 / 2;
+.navbar-toggler:focus{
+    border: none;
+    outline: none;
 }
 
-form.sign-up-form {
-  opacity: 0;
-  z-index: 1;
+.navbar-nav .nav-item{
+    margin-right: 15px;
 }
 
-form.sign-in-form {
-  z-index: 2;
-  
+.navbar-nav .nav-item a.nav-link{
+    color: white;
+    font-weight: 500;
+    font-size: 1.4em;
+    font-family: 'Black Ops One', cursive;
+    border-bottom: 4px solid transparent;
+    transition: 0.3s linear;
 }
 
-.title {
-  font-size: 2.2rem;
-  color: #444;
-  margin-bottom: 10px;
+.navbar-nav .nav-item a.nav-link:hover{
+    border-bottom: 4px solid red;
 }
 
-.input-field {
-  max-width: 380px;
-  width: 100%;
-  background-color: #f0f0f0;
-  margin: 10px 0;
-  height: 55px;
-  border-radius: 55px;
-  display: grid;
-  grid-template-columns: 15% 85%;
-  padding: 0 0.4rem;
-  position: relative;
-}
-
-.input-field i {
-  text-align: center;
-  line-height: 55px;
-  color: #acacac;
-  transition: 0.5s;
-  font-size: 1.1rem;
-}
-
-.input-field input {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #333;
-}
-.input-field select {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #aaa;
-}
-.input-field select option {
-  background: none;
-  outline: none;
-  border: none;
-  line-height: 1;
-  font-weight: 600;
-  font-size: 1.1rem;
-  color: #000000;
-}
-
-.input-field input::placeholder {
-  color: #aaa;
-  font-weight: 500;
-}
-
-.social-text {
-  padding: 0.7rem 0;
-  font-size: 1rem;
-  color: #1877f2;
-  text-decoration: underline #1877f2;  
-  cursor: pointer;
-}
-#Forgot{
-  /* padding: 0.7rem ; */
-  color: #1877f2;
-  font-size: 14px;
-  font-weight: 500;
-  padding: 0.7rem 0;
-  text-decoration: underline #1877f2 !important;
-
-}
-.social-media {
-  display: flex;
-  justify-content: center;
-  /* color: #1877f2; */
-}
-
-.social-icon {
-  height: 46px;
-  width: 46px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0 0.45rem;
-  color:#1877f2;
-  border-radius: 50%;
-  border: 1px solid #1877f2;
-  text-decoration: none;
-  font-size: 1.1rem;
-  transition: 0.3s;
-}
-
-.social-icon:hover {
-  /* color: #1264f3;
-  border-color: #4481eb; */
-  color:  #40C4FF;
-  border-color: #40C4FF;
-}
-
-.btn {
-  width: 150px;
-  background-color: #5995fd;
-  border: none;
-  outline: none;
-  height: 49px;
-  border-radius: 49px;
-  color: #fff;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin: 10 0px;
-  /* padding: 0px 40px; */
-  cursor: pointer;
-  transition: 0.5s;
-}
-
-.btn:hover {
-  background-color: #4d84e2;
-}
-.panels-container {
-  position: absolute;
-  height: 100%;
-  width: 100%;
-  top: 0;
-  left: 0;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-}
-
-.container:before {
-  content: "";
-  position: absolute;
-  height: 2000px;
-  width: 2000px;
-  top: -10%;
-  right: 48%;
-  transform: translateY(-50%);
-  background-image: linear-gradient(-45deg, #020c1d 0%, #141414 100%);
-  transition: 1.8s ease-in-out;
-  border-radius: 50%;
-  z-index: 6;
-}
-
-.image {
-  width: 100%;
-  transition: transform 1.1s ease-in-out;
-  transition-delay: 0.4s;
-}
-
-.panel {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-end;
-  justify-content: space-around;
-  text-align: center;
-  z-index: 6;
-}
-
-.left-panel {
-  pointer-events: all;
-  padding: 3rem 17% 2rem 12%;
-}
-
-.right-panel {
-  pointer-events: none;
-  padding: 3rem 12% 2rem 17%;
-}
-
-.panel .content {
-  color: #fff;
-  transition: transform 0.9s ease-in-out;
-  transition-delay: 0.6s;
-}
-
-.panel h3 {
-  font-weight: 600;
-  line-height: 1;
-  font-size: 1.5rem;
-}
-
-.panel p {
-  font-size: 0.95rem;
-  padding: 0.7rem 0;
-}
-
-.btn.transparent {
-  margin: 0;
-  background: none;
-  border: 2px solid #fff;
-  width: 130px;
-  height: 41px;
-  font-weight: 600;
-  font-size: 0.8rem;
-}
-
-.right-panel .image,
-.right-panel .content {
-  transform: translateX(800px);
-}
-
-/* ANIMATION */
-
-.container.sign-up-mode:before {
-  transform: translate(100%, -50%);
-  right: 52%;
-}
-
-.container.sign-up-mode .left-panel .image,
-.container.sign-up-mode .left-panel .content {
-  transform: translateX(-800px);
-}
-
-.container.sign-up-mode .signin-signup {
-  left: 25%;
-}
-
-.container.sign-up-mode form.sign-up-form {
-  opacity: 1;
-  z-index: 2;
-}
-
-.container.sign-up-mode form.sign-in-form {
-  opacity: 0;
-  z-index: 1;
-}
-
-.container.sign-up-mode .right-panel .image,
-.container.sign-up-mode .right-panel .content {
-  transform: translateX(0%);
-}
-
-.container.sign-up-mode .left-panel {
-  pointer-events: none;
-}
-
-.container.sign-up-mode .right-panel {
-  pointer-events: all;
-}
-
-@media (max-width: 870px) {
-  .container {
-    min-height: 800px;
-    height: 100vh;
-  }
-  .signin-signup {
+main{
+    background-image: url('images/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
     width: 100%;
-    top: 95%;
-    transform: translate(-50%, -100%);
-    transition: 1s 0.8s ease-in-out;
-  }
-
-  .signin-signup,
-  .container.sign-up-mode .signin-signup {
-    left: 50%;
-  }
-
-  .panels-container {
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 2fr 1fr;
-  }
-
-  .panel {
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    padding: 2.5rem 8%;
-    grid-column: 1 / 2;
-  }
-
-  .right-panel {
-    grid-row: 3 / 4;
-  }
-
-  .left-panel {
-    grid-row: 1 / 2;
-  }
-
-  .image {
-    width: 200px;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.6s;
-  }
-
-  .panel .content {
-    padding-right: 15%;
-    transition: transform 0.9s ease-in-out;
-    transition-delay: 0.8s;
-  }
-
-  .panel h3 {
-    font-size: 1.2rem;
-  }
-
-  .panel p {
-    font-size: 0.7rem;
-    padding: 0.5rem 0;
-  }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-  .laa{
-    /* padding:  0;
-     margin-top: -50px !important;
-     margin-bottom: 15px !important; */
-    /* padding-bottom: 3px; ; */
-    display: none;
-  }
-  .title {
-    font-size: 2.2rem;
-    color: #444;
-    margin-bottom: 10px;
-    margin-top: -11px;
-    margin-bottom: 2px;
-  }
-  #sign-in-btn{
-    background-color: #000000;
-    color: #ffffff;
-    margin: 3px;
-  }
-  .la{
-    display: none;
-  }
-  .btn.transparent {
-    width: 110px;
-    height: 35px;
-    font-size: 0.7rem;
-  }
-
-  .container:before {
-    width: 1500px;
-    height: 1500px;
-    transform: translateX(-50%);
-    left: 30%;
-    bottom: 68%;
-    right: initial;
-    top: initial;
-    transition: 2s ease-in-out;
-  }
-
-  .container.sign-up-mode:before {
-    transform: translate(-50%, 109%);
-    bottom: 32%;
-    right: initial;
-  }
-
-  .container.sign-up-mode .left-panel .image,
-  .container.sign-up-mode .left-panel .content {
-    transform: translateY(-300px);
-  }
-
-  .container.sign-up-mode .right-panel .image,
-  .container.sign-up-mode .right-panel .content {
-    transform: translateY(0px);
-  }
-
-  .right-panel .image,
-  .right-panel .content {
-    transform: translateY(300px);
-  }
-
-  .container.sign-up-mode .signin-signup {
-    top: 5%;
-    transform: translate(-50%, 0);
-  }
+    height: 100vh;
+    background-position: center;
 }
 
-@media (max-width: 570px) {
-  form {
-    padding: 0 1.5rem;
-  }
+main h1{
+    font-family: 'Black Ops One', cursive;
+    font-weight: 700;
+    font-size: 3rem;
+    color: white;
+    margin-top: 210px;
+    letter-spacing: 3px;
+}
 
-  .image {
+.container-image-data{
+    background-color: black;
+}
+.tittle h1{
+    font-family: 'Black Ops One', cursive;
+    font-size: 5rem;
+    letter-spacing: 2.6px;
+    background-image: url('images/img.jpg');
+    background-size: 100% 100%;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+.w-100 {
+    width: 100% !important;
+    height: 70vh;
+  }
+.container-image-data .title h1{
+    font-family: 'Black Ops One', cursive;
+    font-size: 5rem;
+    letter-spacing: 2.6px;
+    background-image: url('images/img.jpg');
+    background-size: 100% 100%;
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.container-image-data h3{
+    color: white;
+    font-weight: 600;
+}
+
+.container-image-data p{
+    color: gray;
+    font-weight: 300;
+}
+
+section.sub-footer{
+    background-color: black;
+    border-top: 1px solid red;
+    border-bottom: 1px solid gray;
+}
+
+section.sub-footer{
+    font-weight: 500;
+    color: white;
+}
+
+section.sub-footer ul li{
+    list-style: none;
+    font-size: 14px;
+    color: white;
+    font-weight: 300;
+    margin-bottom: 10px;
+}
+
+footer.footer{
+    background-color: black;
+    color: white;
+    font-size: 12px;
+    word-spacing: 1.2px;
+    font-weight: 300;
+}
+
+.fa-instagram{
+    color: white;
+    font-size: 2.5em;
+    cursor: pointer;
+}
+
+.animate{
+    animation: rotation 1s linear 1s infinite alternate;
+}
+
+@keyframes rotation{
+    from{
+        transform: rotateY(0deg);
+    }
+    to{
+        transform: rotateY(90deg);
+    }
+}
+
+/* jquery plugin twentyywenty style */
+
+.twentytwenty-overlay{
     display: none;
-  }
-  .panel .content {
-    padding: 0.5rem 1rem;
-  }
-  .container {
-    padding: 1.5rem;
-  }
+}
 
-  .container:before {
-    bottom: 72%;
-    left: 50%;
-  }
+/*  bootstrap style */
 
-  .container.sign-up-mode:before {
-    bottom: 28%;
-    left: 50%;
+.row{
+    overflow: hidden;
+}
+
+
+
+/* media query */
+
+
+
+@media (min-width: 768px) {
+    .d-md-block {
+       display: block!important;
+    }
   }
+  
+  /* .d-none {
+       display: none!important;
+  } */
+
+@media only screen and (max-width: 280px){
+    main .title h1{
+        font-size: 2.2em;
+    }
+
+    .container-image-data p{
+        font-size: 14px;
+    }
+
+    .container-image-data h3{
+        font-size: 1.3em;
+    }
+}
+
+@media only screen and (max-width: 450px){
+    .container-image-data .title h1{
+        font-size: 4em;
+    }
+}
+
+@media only screen and (max-width: 350px){
+    .container-image-data .title h1{
+        font-size: 3em;
+    }
+}
+
+@media only screen and (max-width: 270px){
+    .container-image-data .title h1{
+        font-size: 2.5em;
+    }
+}
+
+@media only screen and (max-width: 250px){
+    #footer-img{
+        position: absolute;
+        top: 32px;
+        width: 100px;
+        height: 100px;
+    }
 }
